--- a/frameworks/build.gradle
+++ b/frameworks/build.gradle
@@ -6,6 +6,8 @@ group 'io.github.gianpamx.splitter.server'
 version '1.0-SNAPSHOT'
 
 dependencies {
+    implementation project(':core')
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
 }
