--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'splitter-server'
 
-include ':core', ':common-features', ':groups', ':app'
+include ':core', ':common-features', ':groups', ':app', ':frameworks'
