--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,6 +8,10 @@ version '1.0-SNAPSHOT'
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.mockito:mockito-core:2.28.2"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0"
 }
 
 compileKotlin {
